Finished work with scripts of the cart block

--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
 						<!-- Стоимость заказа -->
 						<div class="cart-total">
 							<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
-							<p><span class="h5">Итого:</span> <span class="total-price">330</span> <span class="rouble">₽</span></p>
+							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
 						</div>
 						<!-- // Стоимость заказа -->
 
 					</div>
 
 					<!-- Оформить заказ -->
-					<div id="order-form" class="card-body border-top">
+					<div id="order-form" class="card-body border-top none">
 						<h5 class="card-title">Оформить заказ</h4>
 						<form>
 							<div class="form-group">
@@ -191,6 +191,8 @@
 	</div>
 
 	<!-- Подключаем скрипты -->
+	<script src="js/calcPrice.js"></script>
+	<script src="js/cartStatus.js"></script>
 	<script src="js/counter.js"></script>
 	<script src="js/cart.js"></script>
 </body>
