Finished working on the delivery block scripts

--- a/index.html
+++ b/index.html
@@ -163,7 +163,11 @@
 
 						<!-- Стоимость заказа -->
 						<div class="cart-total">
-							<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
+							<p class="cart-delivery none">
+								<span class="h5">Доставка:</span> 
+								<span class="delivery-cost">120 ₽</span><br>
+								<span class="small text-secondary">Бесплатно при заказе от 600 ₽</span>
+							</p>
 							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
 						</div>
 						<!-- // Стоимость заказа -->
