--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -8,11 +7,9 @@
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet">
-
 </head>
 
 <body>
-
 	<header class="header">
 		<div class="container text-center">
 			<img src="img/logo/logo.svg" width="92" alt="Суши и пицца">
@@ -23,178 +20,45 @@
 
 	<div class="container mb-5">
 		<div class="row">
-			<!-- Товары -->
 			<div class="col-md-8">
-				<div class="row">
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="01">
-							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Филадельфия хит ролл</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<!-- Счётчик -->
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">180г.</div>
-										<div class="price__currency">300 ₽</div>
-									</div>
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">+ в корзину</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="02">
-							<img class="product-img" src="img/roll/california-tempura.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Калифорния темпура</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">205г.</div>
-										<div class="price__currency">250 ₽</div>
-									</div>
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">+ в корзину</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="03">
-							<img class="product-img" src="img/roll/zapech-california.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Запеченый ролл «Калифорния»</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">182г.</div>
-										<div class="price__currency">230 ₽</div>
-									</div>
-
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">+ в корзину</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="04">
-							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Филадельфия</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">230г.</div>
-										<div class="price__currency">320 ₽</div>
-									</div>
-
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">
-									+ в корзину
-								</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
+				<div class="row" id="productsContainer">
 
 				</div>
 			</div>
 			<div class="col-md-4">
-
-				<!-- Корзина -->
 				<div class="card mb-4">
 					<div class="card-body">
 						<h5 class="card-title">Ваш заказ</h4>
-						<div data-cart-empty class="alert alert-secondary" role="alert">
-							Корзина пуста
-						</div>
-						<!-- cart-wrapper -->
-						<div class="cart-wrapper">
-
-						</div>
-						<!-- // cart-wrapper -->
-
-						<!-- Стоимость заказа -->
-						<div class="cart-total">
-							<p class="cart-delivery none">
-								<span class="h5">Доставка:</span> 
-								<span class="delivery-cost">120 ₽</span><br>
-								<span class="small text-secondary">Бесплатно при заказе от 600 ₽</span>
-							</p>
-							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
-						</div>
-						<!-- // Стоимость заказа -->
-
+							<div data-cart-empty class="alert alert-secondary" role="alert">
+								Корзина пуста
+							</div>
+							<div class="cart-wrapper">
+							</div>
+							<div class="cart-total">
+								<p class="cart-delivery none">
+									<span class="h5">Доставка:</span>
+									<span class="delivery-cost">120 ₽</span><br>
+									<span class="small text-secondary delivery-cost-info">Бесплатно при заказе от 600 ₽</span>
+								</p>
+								<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span
+										class="rouble">₽</span></p>
+							</div>
 					</div>
-
-					<!-- Оформить заказ -->
 					<div id="order-form" class="card-body border-top none">
 						<h5 class="card-title">Оформить заказ</h4>
-						<form>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Ваш номер телефона">
-							</div>
-							<button type="submit" class="btn btn-primary">Заказать</button>
-						</form>
+							<form>
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Ваш номер телефона">
+								</div>
+								<button type="submit" class="btn btn-primary">Заказать</button>
+							</form>
 					</div>
-					<!-- // Оформить заказ -->
-
 				</div>
-				<!-- // Корзина -->
-
-
 			</div>
 		</div>
 	</div>
 
-	<!-- Подключаем скрипты -->
+	<script src="js/renderProducts.js"></script>
 	<script src="js/calcPrice.js"></script>
 	<script src="js/cartStatus.js"></script>
 	<script src="js/counter.js"></script>
